# libmcbetagen

./: CMakeLists.txt  LICENSE  README.md
src/generator/: generator_beta.c  generator_beta.h  generator_biome.c  generator_biome.h  generator_caves.c  generator_caves.h  generator_chunk.h
src/noise/: noise_perlin.c  noise_perlin.h
src/utils/: math_helper.c  math_helper.h  math_java.c  math_java.h  random_java.c  random_java.h
test/: main.c
